Create Projects page

--- a/src/app/components/pages/about-page/about-page.component.html
+++ b/src/app/components/pages/about-page/about-page.component.html
@@ -24,7 +24,7 @@
             <app-card [data]="card"></app-card>
         </div>
     </div> -->
-<!-- </div> -->
+</div>
 
 <!-- <div class="footer">
     <div class="p">
