--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <div class="page-content">
         <router-outlet></router-outlet>
     </div>
-    <footer>
+    <!-- <footer>
         <app-footer></app-footer>
-    </footer>
+    </footer> -->
 </div>
