--- a/src/app/components/ui/navbar/navbar.component.scss
+++ b/src/app/components/ui/navbar/navbar.component.scss
@@ -1,7 +1,7 @@
 :host {
-    font-weight: bold;
+    font-weight: 500;
     color: var(--color-secondary);
-    font-size: 1rem;
+    font-size: .9rem;
 }
 .main-container {
     position: relative;
@@ -10,7 +10,7 @@
     height: 100%;
     display: flex;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: .5rem 2rem;
     z-index: 100;
     overflow: hidden;
 }
