--- a/src/styles/themes/blue-theme-light.scss
+++ b/src/styles/themes/blue-theme-light.scss
@@ -1,8 +1,8 @@
 [data-theme="blue-theme-light"]{
-    // --color-primary: #03045e ;
-    // --color-secondary: #f1f2f6 ;
-    // --color-accent: #a40606 ;
-    // --color-tertiary: #ffba08;
+    --color-primary: #03045e ;
+    --color-secondary: #f1f2f6 ;
+    --color-accent: #a40606 ;
+    --color-tertiary: #ffba08;
 
     // --color-primary:  #0f38ab;
     // --color-secondary:  #fffdfa ;
@@ -10,10 +10,10 @@
     // --color-tertiary: #ffba08;
 
 
-    --color-primary:   #131228;
-    --color-secondary:   #f9b233;
-    --color-accent: #eb4200;
-    --color-tertiary: #f67031;
+    // --color-primary:   #131228;
+    // --color-secondary:   #f9b233;
+    // --color-accent: #eb4200;
+    // --color-tertiary: #f67031;
 
     // --color-primary: #2c2f4c ;
     // --color-secondary:   #daf2f6;
