--- a/src/styles/themes/blue-theme-light.scss
+++ b/src/styles/themes/blue-theme-light.scss
@@ -20,9 +20,14 @@
     // --color-accent:  #e95132;
     // --color-tertiary: #ffba08;
 
-    // --color-primary: #433d8d ;
-    // --color-secondary: #20aadf;
-    // --color-accent:  #f4a627;
+    // --color-primary:  #4b4bc3;
+    // --color-secondary: #a195f9; 
+    // --color-accent:  #f2a1f2; 
+    // --color-tertiary: #f2a1f2;
+
+    // --color-primary:  black;
+    // --color-secondary:  #fffdfa ;
+    // --color-accent: #ffba08;
     // --color-tertiary: #ffba08;
 }
 
