--- a/src/app/components/ui/project-card/project-card.component.scss
+++ b/src/app/components/ui/project-card/project-card.component.scss
@@ -1,5 +1,5 @@
 :host {
-    background-image: linear-gradient(var(--color-secondary) 5%, var(--color-primary) 50%);
+    background-image: linear-gradient(white 5%, var(--color-primary) 50%);
     position: relative;
     display: flex;
     flex-direction: column;
