--- a/src/app/components/ui/footer/footer.component.html
+++ b/src/app/components/ui/footer/footer.component.html
@@ -1,6 +1,6 @@
-<span class="zizmantk">®ZizmanTK 2024</span>
+<span class="zizmantk">®ZizmanTK 2025</span>
 <div class="socials">
-    <a class="social-item" *ngFor="let social of socials" [href]="social.link">
+    <a class="social-item" *ngFor="let social of socials" [href]="social.link" target="_blank">
         <img [src]="social.imageUrl" [alt]="social.name">
         <span>{{social.name}}</span>
     </a>
