--- a/src/styles/themes/blue-theme-light.scss
+++ b/src/styles/themes/blue-theme-light.scss
@@ -4,30 +4,30 @@
     --color-accent: #a40606 ;
     --color-tertiary: #ffba08;
 
-    // --color-primary:  #0f38ab;
-    // --color-secondary:  #fffdfa ;
-    // --color-accent: #b72c7a;
-    // --color-tertiary: #ffba08;
+    --color-primary:  #0f38ab;
+    --color-secondary:  #fffdfa ;
+    --color-accent: #b72c7a;
+    --color-tertiary: #ffba08;
 
 
-    // --color-primary:   #131228;
-    // --color-secondary:   #f9b233;
-    // --color-accent: #eb4200;
-    // --color-tertiary: #f67031;
+    --color-primary:   #131228;
+    --color-secondary:   #f9b233;
+    --color-accent: #eb4200;
+    --color-tertiary: #f67031;
 
-    // --color-primary: #2c2f4c ;
-    // --color-secondary:   #daf2f6;
-    // --color-accent:  #e95132;
-    // --color-tertiary: #ffba08;
+    --color-primary: #2c2f4c ;
+    --color-secondary:   #daf2f6;
+    --color-accent:  #e95132;
+    --color-tertiary: #ffba08;
 
-    // --color-primary:  #4b4bc3;
-    // --color-secondary: #a195f9; 
-    // --color-accent:  #f2a1f2; 
+    // --color-primary:  #333339;
+    // --color-secondary: #d4cff6; 
+    // --color-accent:  #aa1daa; 
     // --color-tertiary: #f2a1f2;
 
-    // --color-primary:  black;
-    // --color-secondary:  #fffdfa ;
-    // --color-accent: #ffba08;
-    // --color-tertiary: #ffba08;
+    --color-primary:   #332400;
+    --color-secondary:  #fff5dc ;
+    --color-accent: #ffba08;
+    --color-tertiary: #ffba08;
 }
 
