--- a/src/app/components/ui/button/button.component.html
+++ b/src/app/components/ui/button/button.component.html
@@ -1,3 +1,3 @@
-<button class="button" type="button" [ngClass]="buttonClasses">
+<button class="button" type="button" [ngClass]="buttonClasses" (click)="clicked.emit($event)">
     <ng-content></ng-content>
 </button>
