--- a/src/app/components/ui/footer/footer.component.scss
+++ b/src/app/components/ui/footer/footer.component.scss
@@ -7,8 +7,8 @@
 }
 
 .zizmantk {
-    color: var(--color-accent);
-    font-size: .5rem;
+    // color: var(--color-accent);
+    font-size: .75rem;
     font-weight: 600;
 }
 
@@ -16,7 +16,7 @@
     display: flex;
     align-items: center;
     margin-left: auto;
-    gap: .5rem;
+    gap: 1.2rem;
     font-size: .4rem;
 }
 
