Fix assets not loading

--- a/src/app/components/pages/home-page/home-page.component.html
+++ b/src/app/components/pages/home-page/home-page.component.html
@@ -3,7 +3,7 @@
     <div class="absolute-center isolate">
         <div class="spotlight" id="spotlight"></div>
         <div class="absolute-center background-image-container">
-            <img src="../../../../assets/images/me_day.jpg" alt="my-photo" class="absolute-center background-image">
+            <img src="./assets/images/me_day.jpg" alt="my-photo" class="absolute-center background-image">
         </div>
 
     </div>
