--- a/src/app/components/ui/navbar/navbar.component.html
+++ b/src/app/components/ui/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="main-container" >
     <a class="ztk-logo" routerLink="home">
-        <img src="../../../../assets/images/mon_logo.svg" alt="ztk-logo" class="ztk-logo--image">
+        <img src="./assets/images/mon_logo.svg" alt="ztk-logo" class="ztk-logo--image">
     </a>
 
     <ul class="horizontal-menu">
